force-app/main/default/objects/Opportunity/fields/A_T__c.field-meta.xml
<CustomField>
    <fullName>A_T__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field for the Advisory and Transformation groups to use for reporting.</description>
    <inlineHelpText>Checkbox field for the Advisory and Transformation groups to use for reporting.</inlineHelpText>
    <label>A&amp;T</label>
    <type>Checkbox</type>
</CustomField>