force-app/main/default/objects/Opportunity/fields/Account_Executive_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner Account Executive who is working this deal</description>
    <inlineHelpText>Enter the contact record of the partner Account Executive who is working this opportunity.</inlineHelpText>
    <label>Account Executive</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Account Executive)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>