force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <description>Annual Contract Value (ACV) is the dollar amount in license sales that ATG has helped our partner close on this specific opportunity.</description>
    <inlineHelpText>Annual Contract Value (ACV) is the dollar amount in license sales that ATG has helped our partner close on this specific opportunity.</inlineHelpText>
    <label>ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>