force-app/main/default/objects/Opportunity/fields/ACV_Update__c.field-meta.xml
<CustomField>
    <fullName>ACV_Update__c</fullName>
    <description>This field is used to provide a qualitative update on the status of ACV</description>
    <inlineHelpText>This field is used to provide a qualitative update on the status of ACV. When populating an update please include date of update and your initials. (i.e. 7/21 JS)</inlineHelpText>
    <label>ACV Update</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>