force-app/main/default/objects/Opportunity/fields/Advisory_Notes__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Notes__c</fullName>
    <description>Field used to capture notes for this Opportunity related to the advisory team. Managed by the Advisory team</description>
    <inlineHelpText>Field used to capture notes for this Opportunity related to the advisory team. Managed by the Advisory team</inlineHelpText>
    <label>Advisory Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>