force-app/main/default/objects/Opportunity/fields/Advisory_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory Opportunity</label>
    <type>Checkbox</type>
</CustomField>