force-app/main/default/objects/Opportunity/fields/Advisory_Owner__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Advisory Point of Contact who owns this Opportunity for the advisory team.</description>
    <inlineHelpText>The Advisory Point of Contact who owns this Opportunity for the advisory team. Managed by the Advisory Team</inlineHelpText>
    <label>Advisory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>