force-app/main/default/objects/Opportunity/fields/Advisory_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Revenue__c</fullName>
    <description>The dollar amount of this Opportunity that is attributed to the Advisory team. Managed by the Advisory team.</description>
    <inlineHelpText>The dollar amount of this Opportunity that is attributed to the Advisory team. Managed by the Advisory team.</inlineHelpText>
    <label>Advisory Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>