force-app/main/default/objects/Opportunity/fields/AIM__c.field-meta.xml
<CustomField>
    <fullName>AIM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, denotes that AIM resources will be staffed on the project.</description>
    <inlineHelpText>If checked, denotes that AIM resources will be staffed on the project.</inlineHelpText>
    <label>AIM</label>
    <type>Checkbox</type>
</CustomField>