force-app/main/default/objects/Opportunity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>This field will automatically sum the values in the following fields: ATG RFR &amp; CTS RFR</description>
    <formula>ATG_RFR__c + CTS_RFR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will automatically sum the values in the following fields: ATG RFR &amp; CTS RFR</inlineHelpText>
    <label>Amount - Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>