force-app/main/default/objects/Opportunity/fields/Application_Support_Offering__c.field-meta.xml
<CustomField>
    <fullName>Application_Support_Offering__c</fullName>
    <description>If the field &quot;Project Type&quot; = Application Support, a value must be provided in the field &quot;Application Support Offering&quot;</description>
    <inlineHelpText>If the field &quot;Project Type&quot; = Application Support, a value must be provided in the field &quot;Application Support Offering&quot;</inlineHelpText>
    <label>Application Support Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post Implementation Support</fullName>
            </value>
            <value>
                <fullName>Expert Services</fullName>
            </value>
            <value>
                <fullName>Health Check</fullName>
            </value>
            <value>
                <fullName>Technical Debt Optimization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>