force-app/main/default/objects/Opportunity/fields/Application_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Support_Type__c</fullName>
    <description>Determines what Application Support is being sold to the Client. Use-it-or-Lose-it, bucket of hours model or auto-renewal offering.</description>
    <inlineHelpText>Determines what Application Support is being sold to the Client. Use-it-or-Lose-it, bucket of hours model or auto-renewal offering.</inlineHelpText>
    <label>Application Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <isActive>false</isActive>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>Use-it-or-Lose-it</fullName>
                <isActive>false</isActive>
                <label>Use-it-or-Lose-it</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>