force-app/main/default/objects/Opportunity/fields/ATG_Partners__c.field-meta.xml
<CustomField>
    <fullName>ATG_Partners__c</fullName>
    <description>Primary partner associated with this opportunity. Adjustments to this picklist will directly affect Revenue Stream and Revenue Sub-Stream formulas.</description>
    <inlineHelpText>Primary partner associated with this opportunity. If the vendor is not listed, please select an &quot;Other&quot; option and add the name to the &quot;Project Description&quot; field.</inlineHelpText>
    <label>ATG Partners</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>GoTransverse</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Vista - Salesforce</fullName>
            </value>
            <value>
                <fullName>Xactly</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
            <value>
                <fullName>Other - Cloud</fullName>
            </value>
            <value>
                <fullName>Other - Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>