force-app/main/default/objects/Opportunity/fields/ATG_Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>ATG_Practice_Area__c</fullName>
    <description>ATG service offering being pursued with this opportunity</description>
    <label>ATG Practice Area (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Cloud Billing</fullName>
            </value>
            <value>
                <fullName>Cloud Billing &amp; CPQ</fullName>
            </value>
            <value>
                <fullName>Cloud CPQ</fullName>
            </value>
            <value>
                <fullName>Conversion Velocity</fullName>
            </value>
            <value>
                <fullName>Implementation Services</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Q2C Assessments</fullName>
            </value>
            <value>
                <fullName>Q2C Project Staffing</fullName>
            </value>
            <value>
                <fullName>Software &amp; Quality</fullName>
            </value>
            <value>
                <fullName>Cloud CLM</fullName>
            </value>
            <value>
                <fullName>ARIA Implementation</fullName>
            </value>
            <value>
                <fullName>Post-Implementation Support</fullName>
            </value>
            <value>
                <fullName>Production Success Team</fullName>
            </value>
            <value>
                <fullName>Salesforce Billing Implementation</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ and Billing Implementation</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ Implementation</fullName>
            </value>
            <value>
                <fullName>SpringCM CLM Implementation</fullName>
            </value>
            <value>
                <fullName>VISTA: BOSS Implementation</fullName>
            </value>
            <value>
                <fullName>VISTA: BOSS Scoping</fullName>
            </value>
            <value>
                <fullName>Zuora Billing Implementation</fullName>
            </value>
            <value>
                <fullName>GoTransverse Billing Implementation</fullName>
            </value>
            <value>
                <fullName>Expert Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>