force-app/main/default/objects/Opportunity/fields/ATG_RFR__c.field-meta.xml
<CustomField>
    <fullName>ATG_RFR__c</fullName>
    <description>Captures the dollar amount of services that will be staffed and delivered by ATG resources. RFR stands for Revenue-Follows-Resource</description>
    <inlineHelpText>Captures the dollar amount of services that will be staffed and delivered by ATG resources. RFR stands for Revenue-Follows-Resource</inlineHelpText>
    <label>ATG RFR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>