force-app/main/default/objects/Opportunity/fields/Billability_Type__c.field-meta.xml
<CustomField>
    <fullName>Billability_Type__c</fullName>
    <inlineHelpText>Type of billing contract we have agreed to with the client.</inlineHelpText>
    <label>Billability Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Transaction Based</fullName>
            </value>
            <value>
                <fullName>Unidentified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>