force-app/main/default/objects/Opportunity/fields/Billing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Billing_Requirements__c</fullName>
    <description>Text field to track special billing requirements: ATG to Client</description>
    <inlineHelpText>Input any special billing requirements for client: ATG billing to the Client</inlineHelpText>
    <label>Client Special Billing Requirements</label>
    <type>TextArea</type>
</CustomField>