force-app/main/default/objects/Opportunity/fields/BusinessPartner__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Denotes who the primary Cognizant Business Partner responsible for the opportunity and account</description>
    <inlineHelpText>Denotes who the primary Cognizant Business Partner responsible for the opportunity and account</inlineHelpText>
    <label>Business Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Business Partner)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>