force-app/main/default/objects/Opportunity/fields/Change_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Type__c</fullName>
    <inlineHelpText>The composition of change orders of deals. Change orders may be for expansion (a positive increase) or remediation (negative scope correction)</inlineHelpText>
    <label>Change Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scope Expansion / Team Extension</fullName>
            </value>
            <value>
                <fullName>Timeline / Budget Remediation</fullName>
            </value>
            <value>
                <fullName>Expansion (Positive)</fullName>
                <isActive>false</isActive>
                <label>Expansion (Positive)</label>
            </value>
            <value>
                <fullName>Remediation (Negative)</fullName>
                <isActive>false</isActive>
                <label>Remediation (Negative)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>