force-app/main/default/objects/Opportunity/fields/Client_Fit__c.field-meta.xml
<CustomField>
    <fullName>Client_Fit__c</fullName>
    <label>Client Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5</valueSetName>
    </valueSet>
</CustomField>