force-app/main/default/objects/Opportunity/fields/Client_Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cognizant Client Partner that maps to this Opportunity</description>
    <inlineHelpText>The Cognizant Client Partner that maps to this Opportunity</inlineHelpText>
    <label>Client Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Client Partner)</relationshipLabel>
    <relationshipName>ClientPartner</relationshipName>
    <type>Lookup</type>
</CustomField>