force-app/main/default/objects/Opportunity/fields/Client_Partner__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner__c</fullName>
    <description>Denotes the Cognizant client partner that is responsible for this opportunity</description>
    <inlineHelpText>Denotes the Cognizant client partner that is responsible for this opportunity</inlineHelpText>
    <label>Client Partner</label>
    <length>250</length>
    <type>Text</type>
</CustomField>