force-app/main/default/objects/Opportunity/fields/Client_Partner_Information_lead_Fields__c.field-meta.xml
<CustomField>
    <fullName>Client_Partner_Information_lead_Fields__c</fullName>
    <description>Used to capture all client partner information from lead mapped fields</description>
    <inlineHelpText>Used to capture all client partner information from lead mapped fields</inlineHelpText>
    <label>Client Partner Information lead Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>