force-app/main/default/objects/Opportunity/fields/CLM_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>CLM_Focus_Area__c</fullName>
    <inlineHelpText>This opportunity&apos;s supplemental CLM focus area, used for reporting by the SE team to identify specific products</inlineHelpText>
    <label>CLM Focus Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>CC4SF</fullName>
            </value>
            <value>
                <fullName>Conga Composer</fullName>
            </value>
            <value>
                <fullName>Conga Contracts (Novatus)</fullName>
            </value>
            <value>
                <fullName>Conga Grid</fullName>
            </value>
            <value>
                <fullName>Conga Orchestrate</fullName>
            </value>
            <value>
                <fullName>Conga Sign</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>iCertis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SpringCM</fullName>
                <isActive>false</isActive>
                <label>SpringCM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>