force-app/main/default/objects/Opportunity/fields/Cloned_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Opportunity__c</fullName>
    <description>Indicates if this opp is a cloned opportunity.</description>
    <formula>IF(Id = Original_Record_ID__c || ISBLANK(Original_Record_ID__c)= TRUE,
   FALSE,
   TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this opp is a cloned opportunity.</inlineHelpText>
    <label>Cloned Opportunity</label>
    <type>Checkbox</type>
</CustomField>