force-app/main/default/objects/Opportunity/fields/Closed_Done__c.field-meta.xml
<CustomField>
    <fullName>Closed_Done__c</fullName>
    <description>Date the project is moved to Closed Done Date</description>
    <inlineHelpText>Date the project is moved to Closed Done Date</inlineHelpText>
    <label>Closed Done Date</label>
    <type>Date</type>
</CustomField>