force-app/main/default/objects/Opportunity/fields/Closed_Done_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Done_Amount__c</fullName>
    <description>The amount of the project at Closed Done</description>
    <inlineHelpText>The amount of the project at Closed Done. This amount allows us to report the difference between what was sold and what was billed.</inlineHelpText>
    <label>Closed Done Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>