force-app/main/default/objects/Opportunity/fields/Co_Selling_Partner_Notes__c.field-meta.xml
<CustomField>
    <fullName>Co_Selling_Partner_Notes__c</fullName>
    <description>This field is used by the Alliances organization to capture pursuit details that are shared during cadence touch-points between ATG&apos;s Alliance organization and our Partners</description>
    <inlineHelpText>This field is used by the Alliances organization to capture pursuit details that are shared during cadence touch-points between ATG&apos;s Alliance organization and our Partners</inlineHelpText>
    <label>Co-Selling Partner Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>