force-app/main/default/objects/Opportunity/fields/Co_Selling_Partners__c.field-meta.xml
<CustomField>
    <fullName>Co_Selling_Partners__c</fullName>
    <description>This field captures the partners that should be made aware of this deal and/or who we are actively working with on this Opportunity</description>
    <inlineHelpText>This field captures the partners that should be made aware of this deal and/or who we are actively working with on this Opportunity</inlineHelpText>
    <label>Co-Selling Partners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acumen/Better Together Program</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Better Together</fullName>
                <isActive>false</isActive>
                <label>Better Together</label>
            </value>
            <value>
                <fullName>Billing Platform</fullName>
            </value>
            <value>
                <fullName>CC4SF</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
                <isActive>false</isActive>
                <label>Conga</label>
            </value>
            <value>
                <fullName>Conga Composer</fullName>
            </value>
            <value>
                <fullName>Conga Contracts</fullName>
            </value>
            <value>
                <fullName>Conga Grid</fullName>
            </value>
            <value>
                <fullName>Conga Orchestrate</fullName>
            </value>
            <value>
                <fullName>Conga Sign</fullName>
            </value>
            <value>
                <fullName>Digital Route</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Enosix</fullName>
            </value>
            <value>
                <fullName>iCertis</fullName>
            </value>
            <value>
                <fullName>Jitterbit</fullName>
            </value>
            <value>
                <fullName>LogikIO</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RenderDraw</fullName>
            </value>
            <value>
                <fullName>RightRev</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Varicent</fullName>
            </value>
            <value>
                <fullName>Vertex</fullName>
            </value>
            <value>
                <fullName>Xactly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>