force-app/main/default/objects/Opportunity/fields/CodeZero_Legacy_Record__c.field-meta.xml
<CustomField>
    <fullName>CodeZero_Legacy_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this denotes this record is legacy data from CodeZero&apos;s Salesfore account that was migrated as part of the Org Merge</description>
    <inlineHelpText>If checked, this denotes this record is legacy data from CodeZero&apos;s Salesfore account that was migrated as part of the Org Merge</inlineHelpText>
    <label>CodeZero Legacy Record</label>
    <type>Checkbox</type>
</CustomField>