force-app/main/default/objects/Opportunity/fields/Cognizant_Point_of_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Point_of_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Cognizant Point of Contact (POC) that maps to this opportunity is the instance the Client and/or Business Partners aren&apos;t driving the deal</description>
    <inlineHelpText>The Cognizant Point of Contact (POC) that maps to this opportunity is the instance the Client and/or Business Partners aren&apos;t driving the deal</inlineHelpText>
    <label>Cognizant Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Cognizant Point of Contact)</relationshipLabel>
    <relationshipName>CognizantPOC</relationshipName>
    <type>Lookup</type>
</CustomField>