force-app/main/default/objects/Opportunity/fields/Cognizant_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Point_of_Contact__c</fullName>
    <description>Denotes the point of contact for the opportunity in the instance it it doesn&apos;t map to a Business Partner or Client Partner</description>
    <inlineHelpText>Denotes the point of contact for the opportunity in the instance it it doesn&apos;t map to a Business Partner or Client Partner</inlineHelpText>
    <label>Cognizant Point of Contact</label>
    <length>250</length>
    <type>Text</type>
</CustomField>