force-app/main/default/objects/Opportunity/fields/Cognizant_Pursuit_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cognizant_Pursuit_Lead__c</fullName>
    <description>Created to capture the Cognizant Pursuit Lead that owns this deal. Individual could be either a Cognizant resource or a ATG AE.</description>
    <inlineHelpText>The name of the Pursuit lead on the Associated WinZone Opportunity for this deal. Data transferred from WinZone and Read-Only in ATG Salesforce.</inlineHelpText>
    <label>Cognizant Pursuit Lead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>