force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <inlineHelpText>Competitors who also vying for this deal</inlineHelpText>
    <label>Competition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4C</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>Acumen</fullName>
            </value>
            <value>
                <fullName>Ad Victoriam</fullName>
            </value>
            <value>
                <fullName>Agiloft</fullName>
            </value>
            <value>
                <fullName>Amind</fullName>
            </value>
            <value>
                <fullName>Bluewolf</fullName>
            </value>
            <value>
                <fullName>Capgemini</fullName>
            </value>
            <value>
                <fullName>CirrusCPQ</fullName>
            </value>
            <value>
                <fullName>CirrusOne</fullName>
            </value>
            <value>
                <fullName>Cloud Performer</fullName>
            </value>
            <value>
                <fullName>Coastal Cloud</fullName>
            </value>
            <value>
                <fullName>Delooitte</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>OriginalShift</fullName>
            </value>
            <value>
                <fullName>Polsource</fullName>
            </value>
            <value>
                <fullName>PWC</fullName>
            </value>
            <value>
                <fullName>Simplus</fullName>
            </value>
            <value>
                <fullName>Slalom</fullName>
            </value>
            <value>
                <fullName>Spaulding Ridge</fullName>
            </value>
            <value>
                <fullName>Stratera</fullName>
            </value>
            <value>
                <fullName>Uptima</fullName>
            </value>
            <value>
                <fullName>West Monroe</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>