force-app/main/default/objects/Opportunity/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <description>Denotes whether or not the NDA, MSA, SOW, DPA, and CO will be on ATG or Cognizant paper.</description>
    <inlineHelpText>Denotes whether or not the NDA, MSA, SOW, DPA, and CO will be on ATG or Cognizant paper.</inlineHelpText>
    <label>Contract Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>Cognizant</fullName>
            </value>
            <value>
                <fullName>CodeZero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>