force-app/main/default/objects/Opportunity/fields/Core_Representative_2__c.field-meta.xml
<CustomField>
    <fullName>Core_Representative_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Partner Core Representative working this opportunity.</description>
    <inlineHelpText>Enter the Contact record of the Partner Core Representative working this opportunity.</inlineHelpText>
    <label>Core Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Core Representative)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>