force-app/main/default/objects/Opportunity/fields/Core_Representative__c.field-meta.xml
<CustomField>
    <fullName>Core_Representative__c</fullName>
    <description>Field to input Core Representative name.</description>
    <inlineHelpText>Field to input in Core Representative name.</inlineHelpText>
    <label>Core Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>