force-app/main/default/objects/Opportunity/fields/CTS_RFR__c.field-meta.xml
<CustomField>
    <fullName>CTS_RFR__c</fullName>
    <description>The dollar amount of revenue that will be staffed and billed by Cognizant resources</description>
    <inlineHelpText>The dollar amount of revenue that will be staffed and billed by Cognizant resources</inlineHelpText>
    <label>CTS RFR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>