force-app/main/default/objects/Opportunity/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Customer ID populated via workflow to pull the Customer ID from the Account this opportunity is associated to.</inlineHelpText>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>